# diffusion

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  intent.md  lineage.json  manifest.json  operations.json  plan.md  pyproject.toml  transcript.jsonl
.claude/: settings.json
configs/diffusion/: block_linear.yaml  continuous_cosine.yaml  masked_cosine.yaml  masked_linear.yaml
configs/models/: 8b.yaml  large.yaml  llama-3-2-1b.yaml  medium.yaml  qwen2-5-0-5b.yaml  qwen3-0-6b.yaml  small.yaml
configs/training/: dpo.yaml  finance-qwen3.yaml  grpo.yaml  pretrain.yaml  sft.yaml
docs/: architecture.md  build-plan.md  financial_datasets.md  research-fa2-bidirectional.md  research-mercury.md  research.md  runpod-setup.md  training-configs-raw.md  training-recipes.md
scripts/: dpo.py  evaluate.py  generate.py  grpo.py  pretrain.py  sft.py
src/diffusion_lm/config/: __init__.py  diffusion.py  generation.py  model.py  training.py
src/diffusion_lm/data/: __init__.py  collators.py  preference.py  pretraining.py  sft.py
src/diffusion_lm/diffusion/: __init__.py  base.py  block.py  continuous.py  masked.py
src/diffusion_lm/evaluation/: lm_eval_adapter.py  perplexity.py
src/diffusion_lm/models/: __init__.py  backbone.py  continuous_diffusion_lm.py  masked_diffusion_lm.py
src/diffusion_lm/samplers/: __init__.py  base.py  block_sampler.py  cached_sampler.py  continuous_sampler.py  first_hitting_sampler.py
tests/: conftest.py  test_diffusion.py  test_model_compat.py  test_models.py  test_samplers.py  test_schedules.py  test_trainers.py
(+11 files in other folders)
