[project]
name = "diffusion-lm"
version = "0.1.0"
description = "Training framework for diffusion-based language models (dLLMs)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40,<5.10",
    "datasets>=2.18",
    "accelerate>=0.28",
    "peft>=0.10",
    "lm-eval>=0.4",
    "wandb>=0.16",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]
flash = [
    "flash-attn>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diffusion_lm"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "N803",  # argument name should be lowercase (common in ML: B, L, V, T)
    "N806",  # variable in function should be lowercase (B, L, V, T)
    "N812",  # torch.nn.functional as F is universal PyTorch convention
    "SIM108", # ternary operator (sometimes less readable in ML code)
]

[tool.ruff.lint.isort]
known-first-party = ["diffusion_lm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring a GPU",
]
